--- a/PW.html
+++ b/PW.html
@@ -40,7 +40,7 @@
         padding: 0%;
         width: 100%;
         height: 100%;
-        background-image: url("https://thumbs.gfycat.com/DefiniteDisastrousEel-size_restricted.gif");
+        background-image: url("https://img.freepik.com/free-vector/gradient-lake-scenery-with-cabin_23-2149181539.jpg?t=st=1689352754~exp=1689353354~hmac=113ffe184669929d735fc295e9a988b6a2ff3b46c2013945a6df4642a7f81677");
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center;
@@ -55,7 +55,7 @@
       }
 
       .text {
-        background: linear-gradient(90deg, #D4145A, #FBB03B);
+        background: linear-gradient(360deg, #009245,#FCEE21);
         font-family: Poppins, sans-serif;
         font-size: 35px;
         text-transform: uppercase;
@@ -65,7 +65,7 @@
       }
 
       h3 {
-        background: linear-gradient(90deg, #D4145A, #FBB03B);
+        background: linear-gradient(360deg, #009245,#FCEE21);
         text-transform: uppercase;
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
@@ -83,7 +83,7 @@
 
       nav {
         font-family: 'Montserrat', sans-serif;
-        background: linear-gradient(90deg, #FBB03B, #D4145A);
+        background: linear-gradient(270deg, #009245,#FCEE21);
         height: 80px;
         width: 100%;
       }
