--- a/contact.html
+++ b/contact.html
@@ -25,9 +25,9 @@
       </label>
       <label class="logo">David</label>
       <ul>
-        <li><a class="active" href="#">Home</a></li>
+        <li><a href="PW.html">Home</a></li>
         <li><a href="about.html">About</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a class="active"href="contact.html">Contact</a></li>
       </ul>
     </nav>
 
