--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
         Greetings <br />
         I'm David.
       </h1>
-      <h3>A front-end developer & graphic designer</h3>
+      <h3></h3>
     </div>
 
     <nav>
@@ -25,8 +25,8 @@
       </label>
       <label class="logo">David</label>
       <ul>
-        <li><a class="active" href="#">Home</a></li>
-        <li><a href="about.html">About</a></li>
+        <li><a href="PW.html">Home</a></li>
+        <li><a class="active"href="#">About</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
